WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87985
[Cairo] Implementation of GraphicsContext does not save/restore ImageInterpolation correctly
https://bugs.webkit.org/show_bug.cgi?id=87985
Summary
[Cairo] Implementation of GraphicsContext does not save/restore ImageInterpol...
Mario Sanchez Prada
Reported
2012-05-31 09:23:33 PDT
After the patch for
bug 87853
, layout test fast/canvas/canvas-imageSmoothingEnabled.html has been consistently failing in the bots, with the following diff: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/fast/canvas/canvas-imageSmoothingEnabled-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/fast/canvas/canvas-imageSmoothingEnabled-actual.txt @@ -23,9 +23,9 @@ PASS left_of_center_pixel.data[1] !== 0 is true PASS left_of_center_pixel.data[2] !== 0 is true Test that restoring actually changes smoothing and not just the attribute value. We are restoring to a point where imageSmoothingEnabled is set to false. -PASS left_of_center_pixel.data[0] is 0 -PASS left_of_center_pixel.data[1] is 0 -PASS left_of_center_pixel.data[2] is 0 +FAIL left_of_center_pixel.data[0] should be 0. Was 63. +FAIL left_of_center_pixel.data[1] should be 0. Was 63. +FAIL left_of_center_pixel.data[2] should be 0. Was 63. PASS successfullyParsed is true TEST COMPLETE See two comments by Stephen White in that bug for some hints on what could be going on:
https://bugs.webkit.org/show_bug.cgi?id=87853#c8
https://bugs.webkit.org/show_bug.cgi?id=87853#c9
Adding to test_expectations.txt in the meanwhile
Attachments
Patch
(8.19 KB, patch)
2012-06-04 01:59 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2012-05-31 13:48:24 PDT
Since this seems to be an issue with the cairo backend, I'm retitling it to indicate so, as the EFL port is having the same issue.
Dominik Röttsches (drott)
Comment 2
2012-06-01 06:30:18 PDT
will upload patch soon.
Dominik Röttsches (drott)
Comment 3
2012-06-04 01:59:29 PDT
Created
attachment 145544
[details]
Patch
WebKit Review Bot
Comment 4
2012-06-04 06:31:31 PDT
Comment on
attachment 145544
[details]
Patch Clearing flags on attachment: 145544 Committed
r119392
: <
http://trac.webkit.org/changeset/119392
>
WebKit Review Bot
Comment 5
2012-06-04 06:31:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug