[Cairo] Implementation of GraphicsContext does not save/restore ImageInterpolation correctly https://bugs.webkit.org/show_bug.cgi?id=87985

Patch by Dominik Röttsches <dominik.rottsches@intel.com> on 2012-06-04
Reviewed by Gustavo Noronha Silva.

Source/WebCore:

Moving image interpolation quality setting into state so that it's saved and restored.

Covered by existing test fast/canvas/canvas-imageSmoothingEnabled.html which is now passing.

* platform/graphics/cairo/GraphicsContextPlatformPrivateCairo.h:
(GraphicsContextPlatformPrivate): Removing stale member that was never used.
* platform/graphics/cairo/PlatformContextCairo.cpp:
(WebCore::PlatformContextCairo::State::State):
(PlatformContextCairo::State):
(WebCore::PlatformContextCairo::PlatformContextCairo):
(WebCore::PlatformContextCairo::drawSurfaceToContext):
(WebCore::PlatformContextCairo::setImageInterpolationQuality):
(WebCore):
(WebCore::PlatformContextCairo::imageInterpolationQuality):
* platform/graphics/cairo/PlatformContextCairo.h:
(PlatformContextCairo): Moving implementations for image interpolation quality setter into implementation file.

LayoutTests:

Unskipping fast/canvas/canvas-imageSmoothingEnabled.html now that it passes.

* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/106059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119392 268f45cc-cd09-0410-ab3c-d52691b4dbfc