Source/WebCore/platform/graphics/cairo/PlatformContextCairo.h
@@ -58,8 +58,8 @@ public:
     void pushImageMask(cairo_surface_t*, const FloatRect&);
     void drawSurfaceToContext(cairo_surface_t*, const FloatRect& destRect, const FloatRect& srcRect, GraphicsContext*);
 
-    void setImageInterpolationQuality(InterpolationQuality quality) { m_imageInterpolationQuality = quality; }
-    InterpolationQuality imageInterpolationQuality() const { return m_imageInterpolationQuality; }
+    void setImageInterpolationQuality(InterpolationQuality);
+    InterpolationQuality imageInterpolationQuality() const;
 
     enum PatternAdjustment { NoAdjustment, AdjustPatternForGlobalAlpha };
     void prepareForFilling(const GraphicsContextState&, PatternAdjustment);
@@ -78,7 +78,6 @@ private:
     // so it does not need to be on the state stack.
     ShadowBlur m_shadowBlur;
 
-    InterpolationQuality m_imageInterpolationQuality;
 };
 
 } // namespace WebCore
